--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
         // Lanyard Discord Status
         const discordStatusElement = document.getElementById('discord-status');
-        const userId = 'JOUW_DISCORD_USER_ID'; // Vervang door je eigen Discord User ID
+        const userId = 'J905924287339323452'; // Vervang door je eigen Discord User ID
         fetch(`https://api.lanyard.rest/v1/users/${userId}`)
             .then(res => res.json())
             .then(data => {
