Update: Nieuwe design

--- a/community.html
+++ b/community.html
@@ -28,7 +28,7 @@
         <img src="https://i.imgur.com/hpjrgcl.png" alt="NieuweDuinen Logo" class="header-logo">
         <h1>NieuweDuinen Roleplay</h1>
         <p>Sluit je aan bij onze bruisende community en beleef onvergetelijke momenten!</p>
-        <a href="fivem://connect/play.nieuweduinenrp.nl:30120" class="button" aria-label="Verbind met NieuweDuinen Roleplay FiveM-server">Verbind met de Server</a>
+        <a href="fivem://connect/play.nieuweduinenrp.nl:30120" class="connect-button" aria-label="Verbind met NieuweDuinen Roleplay FiveM-server">Verbind met de Server</a>
     </header>
     <main>
         <section id="community">
@@ -50,7 +50,7 @@
             </h2>
             <div class="connect-server">
                 <p>Sluit je direct aan bij onze server!</p>
-                <a href="fivem://connect/play.nieuweduinenrp.nl:30120" class="button" aria-label="Verbind met NieuweDuinen Roleplay FiveM-server">Verbind Nu</a>
+                <a href="fivem://connect/play.nieuweduinenrp.nl:30120" class="connect-button" aria-label="Verbind met NieuweDuinen Roleplay FiveM-server">Verbind Nu</a>
             </div>
             <div class="map-container">
                 <h3>Ontdek NieuweDuinen</h3>
