--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
         <div class="hero-bg"></div>
         <nav class="nav-container">
-            <div class="nav-bg"></div>
+            <div class="nav-bg">
+                <div class="nav-particles"></div>
+            </div>
             <button class="hamburger" aria-label="Open navigatiemenu" aria-expanded="false">
                 <span></span>
                 <span></span>
