--- a/community.html
+++ b/community.html
@@ -15,7 +15,9 @@
     <header>
         <div class="hero-bg"></div>
         <nav class="nav-container">
-            <div class="nav-bg"></div>
+            <div class="nav-bg">
+                <div class="nav-particles"></div>
+            </div>
             <button class="hamburger" aria-label="Open navigatiemenu" aria-expanded="false">
                 <span></span>
                 <span></span>
@@ -182,7 +184,7 @@
         }
 
         locations.forEach(location => {
-            location.addEventListener('click', () => {
+            link.addEventListener('click', () => {
                 hideAllPopups();
                 const popupId = location.getAttribute('data-popup');
                 const popup = document.getElementById(popupId);
